# cringegen

./: .flake8  .gitignore  CHANGELOG.md  Cargo.toml  NOOBAI.md  README.md  TODO.md  imx-plot  lint.py  noobai_api.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cringegen/: __init__.py  __main__.py  cli.py
docs/: TODO.md
examples/: comprehensive_nlp_test.py  data_structures_demo.py  enhanced_caption_test.py  enhanced_nlp_test.py  entity_detection_test.py  famous_anthro_demo.py  furry_entity_detection_test.py  nlp_demo.py  nlp_features_test.py
imx/: Cargo.toml  imx-plot.rs
scripts/: fix_invalid_tags.py  latrans_strength_seeds.sh  lora_xyplot.sh  test_readme_examples.sh  validate_tags.py
test_output/: test_cfg_4.0.json  test_cfg_7.0.json  test_steps_20.json  test_steps_30.json
tests/: __init__.py  check_taxonomy.py  comprehensive_test.py  data_structures_demo.py  enhanced_caption_test.py  enhanced_nlp_test.py  entity_detection_test.py  famous_anthro_demo.py  furry_entity_detection_test.py  model_detect.py  nlp_demo.py  nlp_features_test.py  species_test.py  test_basic_workflow.py  test_color_features.py  test_cringegen_nlp.py  test_fictional_species.py  test_format_tags.py  test_logging.py  test_lora_analyzer.py  test_model_detection.py  test_model_detection2.py  test_model_detection3.py  test_model_standalone.py  test_negative_prompt.py  test_new_species.py  test_new_species_tag_enhancement_command.py  test_nlp.py  test_noobai_nsfw.py  test_noobai_optimization.py  test_nsfw_tags.py  test_ollama.py  test_refactored_features.py  (+8 more)
(+100 files in other folders)
