[package]
name = "cringegen-xyplot"
version = "0.1.0"
edition = "2021"
authors = ["CringeGen contributors"]
description = "XY Plot support for CringeGen"
license = "MIT"

[dependencies]
imx = { path = "./imx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"


[[bin]]
name = "imx-plot"
path = "imx-plot.rs"
