[package]
name = "cringegen-xyplot"
version = "0.1.0"
edition = "2021"
authors = ["cringegen contributors"]
description = "XY Plot support for cringegen"
license = "MIT"

[dependencies]
imx = { path = "./imx" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"


[[bin]]
name = "imx-plot"
path = "imx-plot.rs"
